--- a/09.react_navigation/src/App.css
+++ b/09.react_navigation/src/App.css
@@ -1,8 +1,5 @@
-* {
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.title h2 {
-  margin: 12px;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
